<resources>
    <string name="app_name">COCPlanner</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="menu_clan">Clan</string>
    <string name="menu_outlaws">Outlaws</string>
    <string name="menu_startwar">Start War</string>
    <string name="menu_plan">Plan</string>
    <string name="menu_logattacks">Log Attacks</string>
    <string name="menu_pushnow">Push Now</string>
    <string name="menu_notifsettings">Notification Settings</string>

    <!--clan_fragment related-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blank_fragment2">Hello blank fragment2</string>

    <!--outlaws_fragment related-->
    <string name="outlaws_hello_blank_fragment">Hello blank outlaws</string>
    <string name="outlaws_hello_blank_fragment2">Hello blank outlaws2</string>

    <!--startwar related-->
    <string name="startwar_hello_blank_fragment">Hello blank startwar</string>
    <string name="startwar_hello_blank_fragment2">Hello blank startwar2</string>

    <!--plan related-->
    <string name="plan_hello_blank_fragment">Hello blank plan</string>
    <string name="plan_hello_blank_fragment2">Hello blank plan2</string>

    <!--logattacks related-->
    <string name="logattacks_hello_blank_fragment">Hello blank logattacks</string>
    <string name="logattacks_hello_blank_fragment2">Hello blank logattacks2</string>

    <!--push now related-->
    <string name="pushnow_hello_blank_fragment">Hello blank pushnow</string>
    <string name="pushnow_hello_blank_fragment2">Hello blank pushnow2</string>

    <!--notif settings related-->
    <string name="notifsettings_hello_blank_fragment">Hello blank notifsettings</string>
    <string name="notifsettings_hello_blank_fragment2">Hello blank notifsettings2</string>


</resources>
